--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -92,4 +92,36 @@ p {
     }
 }
 
-/* Footer */
+/* barra de busqueda */
+.container{
+    display: flex;
+    justify-content: center ;
+    align-items: center;
+    height: 40vh;
+
+}
+.search-container {
+    position: relative;
+}
+.search-input {
+    position:-ms-page;
+    padding: 23px;
+    font-size: 18px;
+    background-color: var(--main);
+    border-radius: 15px;
+    width: 759px;
+    font: inherit;
+}
+.search-img{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    border: var(--main);
+    padding: 23px;
+    cursor: pointer;
+} 
+.search-icon{
+    position: absolute;
+    width: 23px;
+    height: 23px;
+}
