--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -195,8 +195,8 @@ header {
 .horizontal-scrollbar{
     width: 1300px;
     overflow: auto;
-    border: 1px #F5F5F5;
-    background-color: #F5F5F5;
+    border: 1px var(--light);
+    background-color: var(--light);
     padding: 8px;
 } 
 .horizontal-scrollbar::-webkit-scrollbar {
@@ -212,13 +212,13 @@ header {
 } 
 
 .horizontal-scrollbar::-webkit-scrollbar:horizontal {
-    height: 10px;
+    height: 14px;
 }
 
 .horizontal-scrollbar::-webkit-scrollbar-thumb {
-    background-color: #797979;
+    background-color: var(--main);
     border-radius: 20px;
-    border: 2px solid #f1f2f3;
+    border: 2px solid var(--light);
 }
 
 .horizontal-scrollbar::-webkit-scrollbar-track {
