--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -333,6 +333,11 @@ input[type="search"]::-webkit-search-cancel-button {
     margin-top: 9px;
 }
 
+.card{
+    border: 1px solid;
+    box-shadow: 15px 18px 23px var(--steel-dark);
+}
+
 .pokemon-name {
     display: flex;
     align-items: center;
